--- a/css/common_top_area.css
+++ b/css/common_top_area.css
@@ -196,10 +196,15 @@ body {
 #category_area {
     border-top: 1px solid #999;
     border-bottom: 1px solid #999;
-    padding: 18px 0;
+    height: 62.55px;
     margin-top: 150px;
 }
-
+#category {
+    margin-top: 18px;
+}
+.hamburger {
+    height: 43px;
+}
 .hamburger > img{
     width: 25px;
 }
@@ -220,9 +225,57 @@ body {
     border-left: 1px solid #999;
     cursor: pointer;
 }
+.ranking > span:nth-child(1) {
+    display: inline-block;
+    width: 135px;
+    height: 30px;
+    padding-top: 3px;
+}
 .ranking > span:nth-child(2) {
     margin-left: 5px;
 }
+
+#hamburger_menu {
+    background-color: white;
+    width: 200px;
+    position: absolute;
+    border-top: 1px solid #999;
+    z-index: 999;
+    display: none;
+    cursor: pointer;
+}
+#hamburger_menu > p {
+    text-align: center;
+    margin: 0;
+    padding: 8px 0;
+    cursor: pointer;
+}
+#hamburger_menu > p:hover {
+    color: #af262d;
+    background-color: #f5f1f1;
+}
+
+#hamburger_middle_menu_health, #hamburger_middle_menu_vitamin {
+    background-color: white;
+    width: 200px;
+    position: absolute;
+    border-top: 1px solid #999;
+    z-index: 999;
+    margin-left: 200px;
+    cursor: pointer;
+    display: none;
+}
+#hamburger_middle_menu_health > p, #hamburger_middle_menu_vitamin > p {
+    text-align: center;
+    margin: 0;
+    padding: 8px 0;
+    cursor: pointer;
+}
+#hamburger_middle_menu_health > p:hover, #hamburger_middle_menu_vitamin > p:hover {
+    color: #af262d;
+    background-color: #f5f1f1;
+}
+
 /* // bot header*/
 
 /* chart */
