--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-#category_wrap, #img_slide, #limited {
+#category_wrap, #img_slide, #limited, #special_sale, #event_area {
     width: 1130px;
 }
 
@@ -62,12 +62,15 @@
 /* // 10개 카테고리 영역 */
 
 
-/* 한정수량 */
-#limited {
+/* 한정수량, 초특가 */
+#limited{
     margin-top: 70px;
 }
+#special_sale {
+    margin-top: 150px;
+}
 
-#limited > h2 {
+#limited > h2, #special_sale > h2 {
     border-bottom: 1px solid rgb(1, 75, 23) ;
     text-align: center;
     padding: 15px 0;
@@ -78,14 +81,14 @@
     /* color: rgb(1, 75, 23);*/
     /* color: #af262d; */
 }
-#limited > h2 > span {
+#limited > h2 > span, #special_sale > h2 > span {
     float: right;
     font-size: 16px;
     color: #333;
     margin-top: 20px;
     cursor: pointer;
 }
-#limited > h2 > span:hover {
+#limited > h2 > span:hover, #special_sale > h2 > span:hover {
     color: #af262d;
 }
 .product_info_area > p {
@@ -127,11 +130,11 @@
     left: 0;
 }
 
-.limited_img_area {
+.limited_img_area, .special_sale_img_area {
     width: 250px;
     margin: auto;
 }
-.limited_img_area > img {
+.limited_img_area > img, .special_sale_img_area > img {
     width: 230px;
     height: 230px;
 }
@@ -179,6 +182,80 @@
     font-size: 18px;
     font-weight: 800;
 }
+/* // 한정수령, 초특가 */
+
+
+/* 이벤트 */
+#event_area {
+    margin-top: 70px;
+}
+.event {
+    background-color: orange;
+}
+.event > h2 {
+    border-bottom: 1px solid rgb(1, 75, 23) ;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 25px;
+    color: black;
+}
+.event-pic-frame {
+    margin-top: 20px;
+}
+.ev1 {
+    display: inline-block;
+    width: 570px;
+    height: 150px;
+    margin-left: 10px;
+}
+.ev2 {
+    float: right;
+    width: 424px;
+    height: 150px;
+}
+.ev3 {
+    display: inline-block;
+    width: 273.5px;
+    height: 135px;
+    margin: 15px 18px 0 10px;
+}
+.ev4 {
+    display: inline-block;
+    width: 273.5px;
+    height: 135px;
+    margin-top: 15px;
+}
+.ev5 {
+    float: right;
+    width: 424px;
+    height: 135px;
+    margin-top: 15px;
+}
+.ev1 > a, .ev1 > a > img {
+    display: inline-block;
+    width: 570px;
+    height: 150px;
+}
+.ev2 > a, .ev2 > a > img {
+    display: inline-block;
+    width: 424px;
+    height: 150px;
+}
+.ev3 > a, .ev4 > a, .ev3 > a > img, .ev4 > a > img {
+    display: inline-block;
+    width: 273.5px;
+    height: 135px;
+}
+.ev5 > a, .ev5 > a > img {
+    display: inline-block;
+    width: 424px;
+    height: 135px;
+}
+
+/* // 이벤트*/
+
 
 /* 슬라이드 css */
 .swiper-container {
