--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-#category_wrap, #img_slide, #limited, #special_sale, #event_area {
+#category_wrap, #img_slide, #limited, #special_sale, #event_area, #review_area, #footer_wrap {
     width: 1130px;
 }
 
@@ -189,9 +189,7 @@
 #event_area {
     margin-top: 70px;
 }
-.event {
-    background-color: orange;
-}
+
 .event > h2 {
     border-bottom: 1px solid rgb(1, 75, 23) ;
     text-align: center;
@@ -206,56 +204,191 @@
 }
 .ev1 {
     display: inline-block;
-    width: 570px;
-    height: 150px;
-    margin-left: 10px;
+    margin-left: 40px;
 }
 .ev2 {
     float: right;
-    width: 424px;
-    height: 150px;
+    margin-right: 40px;
 }
 .ev3 {
     display: inline-block;
-    width: 273.5px;
-    height: 135px;
-    margin: 15px 18px 0 10px;
+    margin: 15px 18px 0 40px;
 }
 .ev4 {
     display: inline-block;
-    width: 273.5px;
-    height: 135px;
     margin-top: 15px;
 }
 .ev5 {
     float: right;
-    width: 424px;
-    height: 135px;
     margin-top: 15px;
+    margin-right: 40px;
 }
 .ev1 > a, .ev1 > a > img {
     display: inline-block;
     width: 570px;
-    height: 150px;
+    height: 200px;
 }
 .ev2 > a, .ev2 > a > img {
     display: inline-block;
     width: 424px;
-    height: 150px;
+    height: 200px;
 }
 .ev3 > a, .ev4 > a, .ev3 > a > img, .ev4 > a > img {
     display: inline-block;
     width: 273.5px;
-    height: 135px;
+    height: 170px;
 }
 .ev5 > a, .ev5 > a > img {
     display: inline-block;
     width: 424px;
-    height: 135px;
+    height: 170px;
 }
-
 /* // 이벤트*/
 
+
+/* 베스트 리뷰 */
+#review_area {
+    margin-top: 70px;
+}
+
+.review_top {
+    position: relative;
+    border-bottom: 1px solid rgb(1, 75, 23) ;
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 25px;
+    color: black;
+}
+.review_top > p:nth-child(1) {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.review_top > p:nth-child(1) > i {
+    margin-right: 5px;
+}
+.review_top > h2 {
+    font-size: 32px;
+    font-weight: 500;
+}
+.review_top > p:nth-child(3) {
+    color: #7b7b7b;
+    font-size: 18px;
+    font-weight: 400;
+}
+.review_top > span {
+    position: absolute;
+    right: 0;
+    bottom: 10px;
+    font-size: 16px;
+    color: #333;
+}
+.review_top > span:hover {
+    color: #af262d;
+}
+
+.bi-star-fill {
+    color: rgba(213, 213, 19, 0.866);
+}
+
+.card {
+    height: 300px;
+}
+.card-img-top {
+    width: 358.66px;
+    height: 170px;
+}
+
+.card-body > h5 {
+    font-weight: normal;
+    font-size: 16px;
+    color: #777;
+}
+/* // 베스트 리뷰 */
+
+
+/* footer */
+#footer {
+    margin-top: 100px;
+    background-color: #F9F9F9;
+    padding: 30px 0;
+}
+
+#footer_inner_left {
+    /*display: inline-block;
+    width: 350px;*/
+    float: left;
+    margin-left: 100px;
+}
+#footer_inner_left > p {
+    font-size: 26px;
+}
+#footer_inner_left > div > p {
+    margin-bottom: 4px;
+    font-size: 14px;
+}
+.info > p > span {
+    color: #af262d;
+}
+
+.sns_icon > div > div {
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    padding: 0;
+}
+.sns_icon > div > div > img {
+    width: 40px;
+    margin-top: 5px;
+    border-radius: 10px;
+}
+
+
+#footer_inner_right {
+    margin-left: 620px;
+}
+
+#footer_inner_right > div:nth-child(1) > p {
+    display: inline-block;
+    margin-right: 15px;
+}
+#footer_inner_right > div:nth-child(1) > p::after {
+    content: "|";
+    padding-left: 15px;
+    color: #999;
+}
+#footer_inner_right > div:nth-child(1) > p:last-child:after {
+    content: "";
+}
+#footer_inner_right > p {
+    margin-bottom: 4px;
+    font-size: 14px;
+}
+#footer_inner_right > p:nth-child(4) {
+    font-size: 11px;
+    color: #777;
+}
+
+#footer_inner_right > div:nth-child(5) {
+    margin-top: 20px;
+}
+#footer_inner_right > div:nth-child(5) > h3 {
+    font-size: 26px;
+}
+#footer_inner_right > div:nth-child(5) > h3 > span {
+    margin-left: 265px;
+    font-size: 16px;
+    color: #333;
+    margin-top: 20px;
+    cursor: pointer;
+}
+#footer_inner_right > div:nth-child(5) > h3 > span:hover {
+    color: #af262d;
+}
+#footer_inner_right > div:nth-child(5) > p {
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+/* // footer */
 
 /* 슬라이드 css */
 .swiper-container {
