--- a/css/index.css
+++ b/css/index.css
@@ -298,9 +298,12 @@
     height: 170px;
 }
 
+.card-body {
+    width: 100%;
+}
 .card-body > h5 {
     font-weight: normal;
-    font-size: 16px;
+    font-size: 14px;
     color: #777;
 }
 /* // 베스트 리뷰 */
