파비콘, header a태그 수정, 로그인페이지

--- a/css/common_top_area.css
+++ b/css/common_top_area.css
@@ -7,6 +7,10 @@ body {
     font-family: 'Noto Sans KR', sans-serif;
     color: black;
 }
+a {
+    color: black;
+    text-decoration: none;
+}
 
 #header_area, #logo_area, #category {
     width: 1130px;
@@ -67,7 +71,7 @@ body {
     margin-top: 4px;
     cursor: pointer;
 }
-.right_header > div > p:hover {
+.right_header > div > p > a:hover {
     color: #af262d;
 }
 
