--- a/css/sign/sign_in.css
+++ b/css/sign/sign_in.css
@@ -4,6 +4,8 @@
     margin-top: 20px;
 }
 
+
+/* 로그인 상단 */
 #sign_in_top {
     border-bottom: 2px solid black;
     height: 30px;
@@ -20,9 +22,131 @@
     font-size: 12px;
     font-weight: 400;
 }
+/* // 로그인 상단 */
 
+
+/* 하단 로그인 */
 #sign_in_bottom {
     width: 550px;
     margin-top: 50px;
-    background-color: violet;
 }
+/* // 하단 로그인 */
+
+/* 회원, 비회원 로그인 선택칸 */
+#sign_in_select > p {
+    float: left;
+    width: 140px;
+    height: 35px;
+    text-align: center;
+    padding-top: 8px;
+    margin: 0;
+    font-size: 12px;
+    border: 1px solid #555;
+    border-bottom: none;
+    cursor: pointer;
+}
+#sign_in_select > p:nth-child(1) {
+    background-color: #555;
+    color: white;
+}
+/* // 회원, 비회원 로그인 선택칸 */
+
+
+#sign_in_info {
+    clear: both;
+    font-size: 12px;
+    border: 1px solid #555;
+    text-align: center;
+    padding: 30px 0 0;
+}
+#id_pw_info {
+    width: 370px;
+}
+#id_pw_info > div:nth-child(1) {
+    float: left;
+    width: 270px;
+}
+#id_pw_info > div:nth-child(2) {
+    width: 100px;
+    height: 78px;
+    float: right;
+}
+#id_pw_info > div > input {
+    background-color: #af262d;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    width: 80px;
+    height: 45px;
+    border: none;
+    display: inline-block;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+#id_pw_info > div > p > label {
+    width: 45px;
+}
+
+#id_check {
+    clear: both;
+    margin-bottom: 15px;
+}
+
+#sns_explanation {
+    padding-left: 20px;
+    margin-bottom: 30px;
+}
+#sns_explanation > p {
+    width: 350px;
+    text-align: left;
+    margin-bottom: 5px;
+    color: red;
+}
+
+#find_info {
+    height: 45px;
+}
+#find_info > p > button {
+    border: none;
+    width: 90px;
+    height: 28px;
+    margin-right: 10px;
+}
+
+
+/* 비회원 로그인 */
+#non_info {
+    display: none;
+    clear: both;
+    font-size: 12px;
+    border: 1px solid #555;
+    text-align: center;
+    padding: 30px 0;
+    height: 170px;
+}
+#non_info_detail {
+    width: 370px;
+}
+#non_info_detail > div:nth-child(1) {
+    float: left;
+    width: 270px;
+}
+#non_info_detail > div:nth-child(2) {
+    width: 100px;
+    margin-top: 20px;
+    float: right;
+}
+
+#non_info_detail > div > input {
+background-color: #af262d;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    width: 80px;
+    height: 45px;
+    border: none;
+    display: inline-block;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+/* // 비회원 로그인 */
